--- a/style.css
+++ b/style.css
@@ -68,33 +68,29 @@ section {
 #input-box {
   width: 100%;
   padding: 10px;
-  border: ridge;
-  border-color: #4d4d4d;
   font-size: 2rem;
   margin: 30px 0px 0px 10px;
   background-color: white;
   display:block;
+  box-shadow: 1px 1px #b22222;
 }
 
 button{
   color: white;
   background-color: red;
-  border-style: ridge;
   border-radius: 45%;
-  border-color: black;
   text-shadow: 1px 1px black;
   padding: 8px;
   font-size: 15px;
   cursor: pointer;
   float:right;
   margin: 20px;
+  box-shadow: 1px 1px black;
 }
 
 button:hover {
   background-color: silver;
   color: red;
-  border-color: red;
-    /* border-radius: 30px; */
 }
 
 ::placeholder{
@@ -155,17 +151,14 @@ form ion-icon {
   font-size: 1.4rem;
   font-weight: 600;
   margin-top: 20px;
-  border-style: ridge;
-  border-radius: 45%;
-  border-color: silver;
+  border-radius: 40%;
   align-self: flex-start;
+  box-shadow: 1px 1px red;
 }
 
  a:hover {
   background-color: white;
   color: #282828;
-  border-color: #282828;
-    /* border-radius: 30px; */
 }
 
 
