--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 h1{
-  color: silver;
+  color: black;
     text-shadow: 3px 3px #b22222;
     text-decoration: underline; 
     text-decoration-color:  #b22222;
@@ -30,7 +30,7 @@ h2{
     text-decoration-color: #282828;
 }
 h3{
-  color: silver;
+  color: black;
   text-align: center;
   text-shadow: 2px 2px #b22222;
   font-size: 3rem;
