--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 100px 0;
-  background-color: #282828;
+  background-color: whitesmoke;
   /* background: linear-gradient(to top right, #ff0000 27%, #b22222 58%); */
   
 }
