--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2{
 h3{
   color: black;
   text-align: center;
-  text-shadow: 2px 2px #b22222;
+  text-shadow: 2px 2px navy;
   font-size: 3rem;
   margin: 15px;
 }
@@ -45,7 +45,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 100px 0;
-  background-color: #f5f5f5;
+  background-color: blue;
   /* background: linear-gradient(to top right, #ff0000 27%, #b22222 58%); */
   
 }
@@ -97,7 +97,7 @@ button:hover {
 ::placeholder{
   color: navy;
   opacity: 10;
-  text-shadow: 1px 1px #4d4d4d;
+  text-shadow: 1px 1px navy;
 }
 form ion-icon {
   margin-top: -45px;
@@ -105,7 +105,7 @@ form ion-icon {
   width: 8%;
   font-size: 3rem;
   float: right;
-  color: #4d4d4d;
+  color: navy;
   display: inline-block;
 }
 .search-result {
@@ -122,7 +122,7 @@ form ion-icon {
   /* background-color:  #dc5539; */
   padding: 15px;
   overflow: hidden;
-  box-shadow: 2px 2px #696969;
+  box-shadow: 2px 2px navy;
 }
 .item img {
   width: 100%;
