--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ form ion-icon {
 
 .footer{
   text-align: left;
-  color: #DCDCDC;
+  color: navy;
   margin: auto;
   text-shadow: 1px 1px dimgray;
 }
