--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 100px 0;
-  background-color: white;
+ 
   /* background: linear-gradient(to top right, #ff0000 27%, #b22222 58%); */
   
 }
@@ -55,7 +55,7 @@ section {
   max-width: 1000px;
   margin: auto;
   padding: 0;
-  
+   background-color: blue;
   
 }
 .title {
