--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ section {
   max-width: 1000px;
   margin: auto;
   padding: 0;
-   background-color: blue;
+   background-color: ghostwhite;
   
 }
 .title {
