--- a/style.css
+++ b/style.css
@@ -22,17 +22,17 @@ h1{
   color: black;
     text-shadow: 3px 3px navy;
     text-decoration: underline; 
-    text-decoration-color:  navy;
+    text-decoration-color:  blue;
 }
 h2{
     text-shadow: 1px 1px black;
     text-decoration: underline;
-    text-decoration-color: navy;
+    text-decoration-color: blue;
 }
 h3{
   color: black;
   text-align: center;
-  text-shadow: 2px 2px navy;
+  text-shadow: 2px 2px blue;
   font-size: 3rem;
   margin: 15px;
 }
@@ -45,7 +45,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 100px 0;
-  background-color: ghostwhite;
+  background-color: ghost white;
     box-shadow:black;
  
   /* background: linear-gradient(to top right, #ff0000 27%, #b22222 58%); */
@@ -82,7 +82,7 @@ button{
   color: white;
   background-color: navy;
   border-radius: 45%;
-  text-shadow: 1px 1px black;
+  text-shadow: 1px 1px blue;
   padding: 8px;
   font-size: 15px;
   cursor: pointer;
@@ -93,11 +93,11 @@ button{
 
 button:hover {
   background-color: blue;
-  color: red;
+  color: light blue;
 }
 
 ::placeholder{
-  color: navy;
+  color: blue;
   opacity: 10;
   text-shadow: 1px 1px navy;
 }
@@ -149,14 +149,14 @@ form ion-icon {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  background-color: navy;
+  background-color: blue;
   color: white;
   font-size: 1.4rem;
   font-weight: 600;
   margin-top: 20px;
   border-radius: 40%;
   align-self: flex-start;
-  box-shadow: 1px 1px blue;
+  box-shadow: 1px 1px navy;
 }
 
  a:hover {
@@ -172,7 +172,7 @@ form ion-icon {
   font-size: 1.4rem;
   letter-spacing: 0.05rem;
   line-height: 2rem;
-  text-shadow: 0.5px 0.5px black;
+  text-shadow: 0.5px 0.5px navy;
 }
 .container .brand {
   font-size: 7rem;
@@ -203,7 +203,7 @@ form ion-icon {
 
 .footer{
   text-align: left;
-  color: navy;
+  color: blue;
   margin: auto;
-  text-shadow: 1px 1px dimgray;
+  text-shadow: 1px 1px navy;
 }
