--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section {
   justify-content: center;
   padding: 100px 0;
   background-color: ghost white;
-    box-shadow:black;
+  box-shadow:  3px 3px black;
  
   /* background: linear-gradient(to top right, #ff0000 27%, #b22222 58%); */
   
