--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ section {
 }
 
 button{
-  color: white;
+  color: whitesmoke;
   background-color:  #e9f1fa;
   border-radius: 45%;
   text-shadow: 1px 1px #00abe4;
