--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ section {
   max-width: 1000px;
   margin: auto;
   padding: 0;
-   background-color: #e9f1fa;
+   background-color: #00ABE4;
   
 }
 .title {
