--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 100px 0;
-  background-color: #e9f1fa;
+  background-color: #ffffff;
   box-shadow:  3px 3px black;
  
   /* background: linear-gradient(to top right, #ff0000 27%, #b22222 58%); */
@@ -59,7 +59,7 @@ section {
   max-width: 1000px;
   margin: auto;
   padding: 0;
-   background-color: #00ABE4;
+   background-color: #e9f1fa;
   
 }
 .title {
@@ -205,7 +205,7 @@ form ion-icon {
 
 .footer{
   text-align: left;
-  color:  #00abe4;
+  color: #e9f1fa;
   margin: auto;
-  text-shadow: 1px 1px navy;
+  text-shadow: 1px 1px #00abe4;
 }
